# coz

./: .gitignore  .travis.yml  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE.md  LICENSE.txt  Makefile  README.md  SConscript  SConstruct  TODO-mac-port.md  TODO.md  benchmark.mk  cmake_install.cmake  common.mk  conanfile.txt  coz  coz-profilerConfig.cmake  coz-profilerConfig.cmake.in  coz-profilerConfigVersion.cmake  deps.mk  freeze.bt  freezetest_bash.sh  freezetest_inotify.sh  index.htm  jsplot.css  jsplot.js  package-lock.json  pause_detector  pause_detector.c  process.py  process.r  profile.coz  profile.js  profile.js.map  profile.ts  pyproject.toml  slider.css  (+4 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: CMakeLists.txt  LICENSE.md  Makefile  check-output.sh
benchmarks/histogram/: CMakeLists.txt  Makefile  histogram-pthread.c
benchmarks/kmeans/: CMakeLists.txt  Makefile  kmeans-pthread.c  stddefines.h
benchmarks/linear_regression/: CMakeLists.txt  Makefile  linear_regression-pthread.c
benchmarks/lock_test/: CMakeLists.txt  lock_test.cpp
benchmarks/matrix_multiply/: CMakeLists.txt  Makefile  map_reduce.h  matrix_multiply-pthread.c
benchmarks/pbzip2/: AUTHORS  BZ2StreamScanner.cpp  BZ2StreamScanner.h  CMakeLists.txt  COPYING  Makefile  README  pbzip2.cpp  pbzip2.h
benchmarks/pca/: CMakeLists.txt  Makefile  pca-pthread.c
benchmarks/producer_consumer/: CMakeLists.txt  Makefile  producer_consumer.cpp
benchmarks/sqlite/: CMakeLists.txt  main.c  sqlite-bench
benchmarks/sqlite-modified/: CMakeLists.txt  Makefile  sqlite-bench
benchmarks/string_match/: CMakeLists.txt  Makefile  string_match-pthread.c
benchmarks/toy/: CMakeLists.txt  Makefile  toy.cpp
benchmarks/toy-rs/: Cargo.toml
benchmarks/toy-rs/src/: main.rs
benchmarks/unbalanced/: Makefile  unbalanced.cpp
benchmarks/word_count/: CMakeLists.txt  Makefile  sort-pthread.c  sort-pthread.h  word_count-pthread.c
benchmarks/work_queue/: work_queue.cpp
cmake/: Findlibelfin.cmake  coz-profilerConfig.cmake.in
doc/: Makefile  coz.rst
docs/: README.md  coz.1  coz.rst
experiments/lines/: blackscholes.lines  canneal.lines  raytrace.lines
hostctl/: go.mod  hostctl  main.go  perf.go
hostctl/internal/: cgscanner.go  delaysrv.go  kube_watcher.go
hostctl_cpp/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hostctl_cpp  log.h  main.cpp  perf.cpp  perf.h  timer.h
include/: SConscript  causal.h  coz.h
include/causal/: counter.h  inspect.h  options.h  perf.h  profiler.h  progress_point.h  real.h  safe_map.h  spinlock.h  thread_state.h  timer.h  util.h
inspect/: Makefile  inspect.cpp  interval.h  interval_dict.h  scope.h
js/: profile.js.map  ui.js  ui.js.map
jsplot/: index.htm  jsplot.css  jsplot.js  profile.js  ui.js
jsplot/profiles/: blackscholes.coz  blackscholes.coz.js  dedup.coz.js  ferret.coz.js  sqlite.coz.js  swaptions.coz  swaptions.coz.js
lib/: Makefile  SConscript  causal.h  inspect.cpp  libcausal.cpp  perf.cpp  profiler.cpp  real.cpp
lib/bootstrap-slider/: bootstrap-slider.js
lib/include/: counter.h  inspect.h  perf.h  siglock.h  util.h
lib/pass/: LLVMCausal.cpp  Makefile
lib/runtime/: Darwin_host.cpp  Makefile  SConscript  arch.h  causal.h  context.h  debug.h  engine.h  host.h  inspect.cpp  libcausal.cpp  libcausal_rt.cpp  perf.cpp  (+9 more)
libcoz/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  alloc_shims.cpp  alloc_shims.h  cmake_install.cmake  elf_compat.h  inspect.cpp  inspect.h  libcoz.cpp  lief_loader.cpp  lief_loader.h  mac_interpose.cpp  mac_interpose.h  macho_support.cpp  macho_support.h  path_filter.h  perf.cpp  perf.h  perf_macos.cpp  perf_macos.cpp~  perf_macos.h  perf_macos.h~  profiler.cpp  profiler.h  progress_point.h  real.cpp  real.h  thread_state.h  util.h
libcoz/ccutil/: log.h  spinlock.h  static_map.h  thread.h  timer.h  wrapped_array.h
overhead_test/: 0.01s.txt  0.1s.txt  1s.txt  calculator.py
patches/: blackscholes.patch  dedup.patch  fluidanimate.patch  streamcluster.patch  swaptions.patch
profiles/: blackscholes.coz.js  convert.py  dedup.coz  dedup.coz.js  ferret.coz  fluidanimate.coz  fluidanimate.coz.js  memcached.coz  memcached.coz.js  sqlite.coz  sqlite.coz.js  swaptions.coz  swaptions.coz.js
pycoz/: coz_process.py  coz_run.py
runtime/: Makefile  arch.h  args.h  basic_block.h  causal.h  counter.h  disassembler.h  elf.h  inspect.cpp  inspect.h  interval.h  libcausal.cpp  log.h  perf.cpp  perf.h  profiler.cpp  profiler.h  real.h  ringbuffer.h  spinlock.h  thread_wrapper.h  util.h  wrappers.cpp
rust/: Cargo.toml  README.md
rust/examples/: toy.rs
rust/src/: lib.rs
rust/tests/: smoke.rs
test/: CMakeLists.txt  load_basic_test.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  common.mk  experiment.py  run_dwarf_scope_test.sh  run_rust_filter_test.sh  test.mk  tests.mk
tests/dwarf/: dwarf_scope_test.cpp
tests/foo/: Makefile  foo.c
tests/histogram/: Makefile  histogram-pthread.c
tests/interval/: Makefile  test.cpp
tests/interval_dict/: Makefile  test.cpp
tests/kmeans/: Makefile  kmeans-pthread.c
tests/linear_regression/: Makefile  linear_regression-pthread.c
tests/loopy/: Makefile  loopy.cpp
tests/matrix_multiply/: Makefile  matrix_multiply-pthread.c
tests/path_filter/: path_filter_test.cpp
tests/pbzip2/: ErrorContext.cpp  ErrorContext.h  Makefile  pbzip2.cpp
tests/pca/: Makefile  pca-pthread.c
tests/producer_consumer/: Makefile  producer_consumer.cpp
tests/rust_filter/: Cargo.toml
tests/rust_filter/src/: main.rs
tests/string_match/: Makefile  string_match-pthread.c
tests/toy/: Makefile  toy.cpp
tests/unbalanced/: Makefile  unbalanced.cpp
tests/word_count/: Makefile  word_count-pthread.c
tests/work_queue/: Makefile  work_queue.cpp
tools/: Makefile  SConscript
viewer/: Makefile  README.md  index.htm  package-lock.json  package.json  plot.css  profile.js  profile.js.map  tsconfig.json  ui.js  ui.js.map  ui.ts
(+67 files in other folders)
