[package]
name = "coz"
version = "0.1.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
repository = "https://github.com/plasma-umass/coz"
license-file = "../LICENSE.md"
readme = "README.md"
description = """
Rust support for the `coz` Causal Profiler: https://github.com/plasma-umass/coz
"""

[dependencies]
libc = "0.2"
once_cell = "1.1"

[profile.release]
debug = 1
